--- a/views/transaction.hbs
+++ b/views/transaction.hbs
@@ -135,9 +135,7 @@
             </div>
         </div>
         <div id="transaction-container" style="height:850px !important; overflow: hidden;" class="col-8 border">
-            <script id="transaction-template" type="text/x-handlebars-template">
-                {{> transactionPartial}}
-                                    </script>
+                {{> transactionPartial Transactions=Transactions}}
         </div>
     </div>
 </div>
