--- a/views/partials/searchResultPartial.hbs
+++ b/views/partials/searchResultPartial.hbs
@@ -14,12 +14,12 @@
             ${{caculateNewPrice chuyen.Tuyen.KhuyenMais.0.phanTram chuyen.gia}}
             <p class="d-inline small text-primary"><i class="fa fa-arrow-down" aria-hidden="true"></i>{{chuyen.Tuyen.KhuyenMais.0.phanTram}}%</p>
             {{else}}
-            {{getPrice chuyen}}
+            ${{getPrice chuyen}}
             {{/if}}
         {{/if}}
     </div>
     <div class="col-2">
-        <a name="" id="" class="btn btn-outline-secondary" href="#" role="button" data-toggle="collapse" data-target="#collapse{{@index}}">Select Seat</a>
+        <a name="" id="openColaaps{{chuyen.id}}" class="btn btn-outline-secondary" href="#" role="button" data-toggle="collapse" data-target="#collapse{{@index}}">Select Seat</a>
     </div>
 </div>
 <div id="collapse{{@index}}" class="row container table-content collapse">
@@ -604,11 +604,11 @@
         <div class="row">
             <div class="col-4">Total</div>
             <div class="col-2"></div>
-            <div id="total{{chuyen.id}}" data-price="{{#if hasVoucher}}${{caculateNewPrice chuyen.Tuyen.KhuyenMais.0.phanTram chuyen.gia}}{{else}}{{#if (HasVoucher chuyen)}}${{caculateNewPrice chuyen.Tuyen.KhuyenMais.0.phanTram chuyen.gia}}{{else}}{{getPrice chuyen}}{{/if}}{{/if}}
-            " class="col-4">$0</div>
+            <div id="total{{chuyen.id}}" data-price="{{#if hasVoucher}}${{caculateNewPrice chuyen.Tuyen.KhuyenMais.0.phanTram chuyen.gia}}{{else}}{{#if (HasVoucher chuyen)}}${{caculateNewPrice chuyen.Tuyen.KhuyenMais.0.phanTram chuyen.gia}}{{else}}{{getPrice chuyen}}{{/if}}{{/if}}" class="col-4">$0</div>
         </div>
         <div class="row">
-            <a style="display: none;"  id="continueBtn{{chuyen.id}}" data-id="{{chuyen.id}}" class="btn btn-primary m-auto continueBtnLoad" href="#" role="button" data-toggle="modal" data-target="#myModal{{chuyen.id}}" onclick="loadSeats(this, {{chuyen.id}})">Continue</a>
+            <a style="display: none;"  id="continueBtn{{chuyen.id}}" data-id="{{chuyen.id}}" class="btn btn-primary m-auto continueBtnLoad" href="#" role="button" data-toggle="modal" data-target="#myModal{{chuyen.id}}" 
+                onclick="loadSeats(this, {{chuyen.id}}, {{isLoggedIn}})"> {{#if isLoggedIn}}Continue{{else}}Log in to continue{{/if}}</a>
         </div>
     </div>
 </div>
